--- a/sass/modules/home.scss
+++ b/sass/modules/home.scss
@@ -3,6 +3,10 @@
 		display: none;
 	}
 
+	ul.additional-info {
+		overflow: hidden;
+	}
+
 	.radio-filters {
 		margin-bottom: 3px;
 	}
